# matrix_solver

./: .clang-format  .gitignore  CMakeLists.txt  README.MD  gen_build.sh  test13_dummy.sh  test13_matr_mpi.sh  test13_mpi.sh
latex/: rep.aux  rep.fdb_latexmk  rep.fls  rep.tex
src/: defines.h  init.cpp  init.h  matrix_op.cpp  matrix_op.h  solver.cpp  solver.h
test/: a.out  test_mat.cpp  test_mpi.cpp
test_data/: a20.txt  c.txt  d.txt  e.txt  f.txt  test13_matr_mpi.sh  test13_mpi.sh
